WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75138
DFG JIT does exactly the wrong thing when doing strict equality on two known cells
https://bugs.webkit.org/show_bug.cgi?id=75138
Summary
DFG JIT does exactly the wrong thing when doing strict equality on two known ...
Filip Pizlo
Reported
2011-12-22 15:17:09 PST
Patch forthcoming.
Attachments
the patch
(103.34 KB, patch)
2011-12-22 15:19 PST
,
Filip Pizlo
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2011-12-22 15:17:40 PST
<
rdar://problem/10621526
>
Filip Pizlo
Comment 2
2011-12-22 15:19:59 PST
Created
attachment 120391
[details]
the patch
Filip Pizlo
Comment 3
2011-12-22 15:24:55 PST
Landed in
http://trac.webkit.org/changeset/103587
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug