DFG JIT does exactly the wrong thing when doing strict equality on two known cells https://bugs.webkit.org/show_bug.cgi?id=75138 <rdar://problem/10621526>

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::nonSpeculativePeepholeStrictEq):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::nonSpeculativePeepholeStrictEq):

LayoutTests:

* fast/js/dfg-string-stricteq-expected.txt: Added.
* fast/js/dfg-string-stricteq.html: Added.
* fast/js/script-tests/dfg-string-stricteq.js: Added.
(foo):
(bar):



Canonical link: https://commits.webkit.org/91898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103587 268f45cc-cd09-0410-ab3c-d52691b4dbfc